--- a/themes/papermod/layouts/partials/footer.html
+++ b/themes/papermod/layouts/partials/footer.html
@@ -7,7 +7,8 @@
     {{- end }}
     <span>
         Powered by
-        <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
+        <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> ,
+        <a href="https://www.netlify.com/" rel="noopener noreferrer" target="_blank">Netlify</a> &
         <a href="https://git.io/hugopapermod" rel="noopener" target="_blank">PaperMod</a>
     </span>
 </footer>
